--- a/index.html
+++ b/index.html
@@ -19,13 +19,11 @@ tags: about
 <div class="bio" style="text-align:justify">
   <!-- <hr/> -->
   <p>
-    I am a penultimate-year Ph.D. student at Beijing Institute of Technology, advised by <a href="https://shuangli.xyz"
-      class="uline">Prof. Shuang Li</a> and Prof. Chi Harold Liu. I received my Bachelor's degree in Software
-    Engineering from <a href="https://www.bit.edu.cn" class="uline">BIT</a> (2015-2019).
+    I am a Ph.D. student at Beijing Institute of Technology, advised by <a href="https://shuangli.xyz" class="uline">Prof. Shuang Li</a> and Prof. Chi Liu. I received my Bachelor's degree in Software Engineering from <a href="https://www.bit.edu.cn" class="uline">BIT</a> (2015-2019).
   </p>
 
   <p>
-    My research interests are in transfer learning, data-efficient learning (particularly unsupervised domain adaptation and active learning) and multimodal learning.
+    My research interests are in transfer learning, data-efficient learning (particularly domain adaptation and active learning) and multimodal learning.
   </p>
 
   <p>
@@ -116,11 +114,16 @@ tags: about
   <ul>
 
     <li>
+      <p>[Sep 2023] Our <a href="https://arxiv.org/abs/2204.08808" class="uline">Annotator</a> for label-efficient LiDAR segmentation is accepted by <font color="red">NeurIPS</font> 2023!</p>
+    </li>
+
+    <li>
       <p>[Feb 2023] Two papers on representation learning (<a href="https://arxiv.org/abs/2211.07636" class="uline">EVA <font color="red">highlight</font></a>) and test-time adaptation (<a href="https://arxiv.org/abs/2303.13899" class="uline">RoTTA</a>) are accepted by CVPR 2023!</p>
     </li>
+   
     <li>
-        <p>[Jan 2023] Our <a href="https://arxiv.org/abs/2204.08808" class="uline">SePiCo</a> for domain adaptive semantic segmentation is accepted by <font color="red">T-PAMI</font> (IF: 24.31)!</p>
-      </li>
+        <p>[Jan 2023] Our <a href="https://arxiv.org/abs/2204.08808" class="uline">SePiCo</a> for domain adaptive semantic segmentation is accepted by <font color="red">T-PAMI</font> (IF: 23.6)!</p>
+    </li>
 
     <li>
       <p>[Nov 2022] Our <a href="https://arxiv.org/abs/2211.12256" class="uline"> VBLC </a> for semantic segmentation under adverse conditions is accepted by AAAI 2023 (<font color="red">ORAL</font>)!</p>
@@ -228,6 +231,35 @@ tags: about
   <table width="100%" align="center" cellspacing="0" cellpadding="0" style="border-collapse: collapse;">
     <tbody>
 
+       <!-- NeurIPS Annotator -->
+       <tr>
+        <td valign="middle" width="35%">
+          <div class="one" style="text-align:center;">
+            <img src="images/Annotator.png" style="max-height: 300px;">
+          </div>
+        </td>
+        <td valign="middle" width="65%">
+          <h5>
+            Annotator: A Generic Active Learning Baseline for LiDAR Semantic Segmentation
+          </h5>
+          <p>
+            <a href="https://nips.cc/" class="uline-special"><span
+              style="color:red">NeurIPS 2023</span></a>
+          </p>
+          <p>
+            <b>Binhui Xie</b>, Shuang Li, Qingju Guo, Chi Harold Liu, and Xinjing Cheng
+          </p>
+          <p>
+            We established a simple and general baseline for label-efficient LiDAR semantic segmentation.
+          </p>
+          <a href="https://binhuixie.github.io/" class="btn btn-outline-primary btn-sm" role="button"
+            aria-pressed="true">Project Page (coming)</a>
+          <a href="https://binhuixie.github.io/" class="btn btn-outline-primary btn-sm" role="button"
+            aria-pressed="true">Paper (coming)</a>
+          <a href="https://github.com/BIT-DA/" class="btn btn-outline-primary btn-sm" role="button"
+            aria-pressed="true">Code (coming)</a>
+        </td>
+      </tr>
 
       <!-- TPAMI SePiCO -->
       <tr>
@@ -802,10 +834,10 @@ tags: about
     Organizer of Workshop: VALSE 2022 (Student Workshop).
   </p>
   <p>
-    Reviewer for AAAI'24, NeurIPS'23, ICCV'23, CVPR'23, ICLR'23, AAAI'23, ECCV'22, CVPR'22, AAAI'22, ICCV'21, CVPR'21, AAAI'21, etc.
+    Reviewer/PC Member for ICLR'24, AAAI'24, NeurIPS'23, ICCV'23, CVPR'23, ICLR'23, AAAI'23, ECCV'22, CVPR'22, AAAI'22, ICCV'21, CVPR'21, AAAI'21, etc.
   </p>
   <p>
-    Reviewer for TKDE, TIV, etc.
+    Reviewer for TKDE, PR, TIV, etc.
   </p>
 </div>
 
@@ -815,7 +847,7 @@ tags: about
   <h2>Teaching Assistant</h2>
   <br />
   <p>
-    Introduction to Machine Learning, since 2021, Instructor: <a href="https://shuangli.xyz" class="uline">Prof. Li</a>
+    Machine Learning Essentials, Spring 2021 \& Spring 2022, Instructor: <a href="https://shuangli.xyz" class="uline">Prof. Li</a>
   </p>
 
 </div>
@@ -823,23 +855,27 @@ tags: about
 
 <hr>
 <div id="news">
-  <h2>Selected Honors and Awards</h2>
+  <h2>Honors and Awards</h2>
   <ul>
-    <!-- <li>
+    <li>
+      <p>
+        3rd place, VisDA-2022@NeurIPS, 2022.
+      </p>
+    <li>
+    <li>
+      <p>
+        Special Academic Scholarship, Beijing Institute of Technology, 2022.
+      </p>
+    <li>
       <p>
         CETC GUORUI Scholarship, 2021.
       </p>
-    </li> -->
+    </li>
     <li>
       <p>
-        Excellent Undergraduate in Beijing Institute of Technology, 2019.
+        Excellent Undergraduate & Graduation Thesis at Beijing Institute of Technology, 2019.
       </p>
     </li>
-    <!-- <li>
-      <p>
-        Second Class Scholarship, Beijing Institute of Technology, 2018.
-      </p>
-    </li> -->
   </ul>
 </div>
 
