reviewer for tip

--- a/index.html
+++ b/index.html
@@ -834,10 +834,10 @@ tags: about
     Organizer of Workshop: VALSE 2022 (Student Workshop).
   </p>
   <p>
-    Reviewer/PC Member for ICLR'24, AAAI'24, NeurIPS'23, ICCV'23, CVPR'23, ICLR'23, AAAI'23, ECCV'22, CVPR'22, AAAI'22, ICCV'21, CVPR'21, AAAI'21, etc.
+    Conference Reviewer for ICLR'24, AAAI'24, NeurIPS'23, ICCV'23, CVPR'23, ICLR'23, AAAI'23, ECCV'22, CVPR'22, AAAI'22, ICCV'21, CVPR'21, AAAI'21, etc.
   </p>
   <p>
-    Reviewer for TKDE, PR, TIV, etc.
+    Journal Reviewer for TIP, TKDE, PR, TIV, etc.
   </p>
 </div>
 
