--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ tags: about
     $('#more').hide();
   }
 </script>
-<img src="{{ site.baseurl }}/images/photo.jpg" alt="Wenxuan Ma (马文轩)" width="180"
+<img src="{{ site.baseurl }}/images/photo.jpg" alt="Wenxuan Ma" width="180"
   style="float: right; padding: 5px 0 0 15px; border-radius: 0%;" />
 
 <div class="bio" style="text-align:justify">
@@ -28,7 +28,7 @@ tags: about
 
   <p>
     <b>Contact</b>: I'm always happy to discuss or collaborate! Feel free to drop me an <a
-      href="mailto:binhuixie@bit.edu.cn" class="uline">email</a> if you're interested.
+      href="mailto:wenxuanma@bit.edu.cn" class="uline">email</a> if you're interested.
   </p>
 
   <br />
@@ -114,18 +114,34 @@ tags: about
   <ul>
 
     <li>
-      <p>[Sep 2023] Our <a href="https://arxiv.org/abs/2204.08808" class="uline">Annotator</a> for label-efficient LiDAR segmentation is accepted by <font color="red">NeurIPS</font> 2023!</p>
+      <p>[Sep 2023] Our LSG for data-efficient image/video/audio learning is accepted by <font color="red">NeurIPS</font> 2023!</p>
+    </li>
+
+    <li>
+      <p>[July 2023] Our BorLan for data-efficient visual learning is accepted by <font color="red">ICCV</font> 2023!</p>
+    </li>
+
+    <li>
+      <p>[July 2022] Our DOT for ViT-based unsupervised domain adaptation is accepted by <font color="red">MM</font> 2022!</p>
+    </li>
+
+    <li>
+      <p>[Sep 2021] Our MetaReg for unsupervised domain adaptation is accepted by <font color="red">TKDE</font> (IF: 8.9)!</p>
+  </li>
+
+    <li>
+      <p>[Feb 2021] Our DDA for resource-efficient unsupervised domain adaptation is accepted by <font color="red">CVPR</font> 2021!</p>
     </li>
 
     <!-- <li>
       <p>[Feb 2023] Two papers on representation learning (<a href="https://arxiv.org/abs/2211.07636" class="uline">EVA <font color="red">highlight</font></a>) and test-time adaptation (<a href="https://arxiv.org/abs/2303.13899" class="uline">RoTTA</a>) are accepted by CVPR 2023!</p>
-    </li>
+    </li> -->
    
-    <li>
+    <!-- <li>
         <p>[Jan 2023] Our <a href="https://arxiv.org/abs/2204.08808" class="uline">SePiCo</a> for domain adaptive semantic segmentation is accepted by <font color="red">T-PAMI</font> (IF: 23.6)!</p>
-    </li>
+    </li> -->
 
-    <li>
+    <!--<li>
       <p>[Nov 2022] Our <a href="https://arxiv.org/abs/2211.12256" class="uline"> VBLC </a> for semantic segmentation under adverse conditions is accepted by AAAI 2023 (<font color="red">ORAL</font>)!</p>
     </li>
 
@@ -324,7 +340,7 @@ tags: about
   <h2>Teaching Assistant</h2>
   <br />
   <p>
-    Machine Learning Essentials, Spring 2021 \& Spring 2022, Instructor: <a href="https://shuangli.xyz" class="uline">Prof. Li</a>
+    Machine Learning Essentials, Spring 2023, Instructor: <a href="https://shuangli.xyz" class="uline">Prof. Li</a>
   </p>
 
 </div>
