--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ tags: about
   </p>
 
   <p>
-    My research interests are in transfer learning (especially in domain adaptation), data-efficient learning and multimodal learning.
+    My research interest includes learning improved representation for transfer learning, domain adaptation, and data-efficient learning in computer vision tasks. I am currently working on knowledge transfer across modalities. 
   </p>
 
   <p>
