--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ tags: about
       <p>[July 2023] Our BorLan for data-efficient visual learning is accepted by <font color="red">ICCV</font> 2023!</p>
     </li>
 
-    <li>
+    <!-- <li>
       <p>[July 2022] Our DOT for ViT-based unsupervised domain adaptation is accepted by <font color="red">ACM MM</font> 2022!</p>
     </li>
 
@@ -131,50 +131,10 @@ tags: about
 
     <li>
       <p>[Feb 2021] Our DDA for resource-efficient unsupervised domain adaptation is accepted by <font color="red">CVPR</font> 2021!</p>
-    </li>
+    </li> -->
 
     <!-- <li>
       <p>[Feb 2023] Two papers on representation learning (<a href="https://arxiv.org/abs/2211.07636" class="uline">EVA <font color="red">highlight</font></a>) and test-time adaptation (<a href="https://arxiv.org/abs/2303.13899" class="uline">RoTTA</a>) are accepted by CVPR 2023!</p>
-    </li> -->
-   
-    <!-- <li>
-        <p>[Jan 2023] Our <a href="https://arxiv.org/abs/2204.08808" class="uline">SePiCo</a> for domain adaptive semantic segmentation is accepted by <font color="red">T-PAMI</font> (IF: 23.6)!</p>
-    </li> -->
-
-    <!--<li>
-      <p>[Nov 2022] Our <a href="https://arxiv.org/abs/2211.12256" class="uline"> VBLC </a> for semantic segmentation under adverse conditions is accepted by AAAI 2023 (<font color="red">ORAL</font>)!</p>
-    </li>
-
-    <li>
-      <p>[Jun 2022] Our <a href="https://ieeexplore.ieee.org/document/9803869" class="uline">CAF</a> for domain adaptation is accepted by TKDE!</p>
-    </li>
-
-    <li>
-      <p>[Apr 2022] Our <a href='https://ieeexplore.ieee.org/document/9756672' class='uline'>CSDN</a> for
-        partial domain adaptation is accepted by T-CYB!</p>
-    </li>
-
-    <li>
-      <p>[Mar 2022] Our <a href="https://arxiv.org/abs/2111.12940" class="uline"> RIPU</a> for data-efficient semantic segmentation is accepted by CVPR 2022  (<font color="red">ORAL</font>)!</p>
-    </li>
-
-    <li>
-      <p>[Dec 2021] Our <a href='https://arxiv.org/abs/2112.01406' class='uline'>EADA</a> for active domain adaptation is accepted by AAAI 2022!</p>
-    </li>
-
-    <li>
-      <p>[Feb 2021] Our <a href='https://arxiv.org/abs/2103.12339' class='uline'>GDCAN</a> (Journal Version of <a href='https://arxiv.org/abs/2005.06717' class='uline'>DCAN</a>) is accepted by <font color="red">T-PAMI</font> (IF: 24.31)!</p>
-    </li>
-
-
-    <li>
-      <p>[Dec 2020] Our <a href='https://arxiv.org/abs/2012.06995' class='uline'>BCDM</a> for
-        bi-classifier adversarial adaptation is accepted by AAAI 2021!</p>
-    </li>
-
-    <li>
-      <p>[Jul 2020] Our <a href='https://arxiv.org/abs/2008.01677' class='uline'>SSAN</a> for
-        heterogeneous domain adaptation is accepted by ACM MM 2020!</p>
     </li> -->
 
   <!-- </ul>
@@ -345,8 +305,8 @@ tags: about
   <ul>
     <li>
       <p>
-        2022.6, Synced (<a href="https://www.bilibili.com/video/BV19a411p7tg/?spm_id_from=333.999.0.0"
-          class="uline">online</a>), Towards Fewer Annotations: Active Learning for Adaptive Semantic Segmentation.
+        2021.3, Qingyuan Live (<a href="https://www.bilibili.com/video/BV1R5411P7bE?p=3&vd_source=9449892be0c9e3f0d9ef47074a426848"
+          class="uline">online</a>), Dynamic Domain Adaptation for Efficient Inference.
       </p>
     </li>
     <!-- <li>
@@ -361,15 +321,15 @@ tags: about
         2022.5, Zhidx Course (<a href="https://course.zhidx.com/c/Njg5MGIyMDlkYjhkZmVhMmI5ZTM="
           class="uline">onine</a>), Active Learning under Distribution Shift.
       </p>
-    </li>
+    </li> -->
     <li>
       <p>
-        2022.3, AI Drive (<a
-          href="https://www.bilibili.com/video/BV1qa411h7Xm/?spm_id_from=333.999.0.0&vd_source=2536293932098e7a347341a231b3fb8b"
-          class="uline">online</a>), Energy-based Active Domain Adaptation.
+        2022.3, AI Time (<a
+          href="https://www.bilibili.com/video/BV14p4y1V7Ym/?spm_id_from=333.788.recommend_more_video.-1&vd_source=9449892be0c9e3f0d9ef47074a426848"
+          class="uline">online</a>), Borrowing Knowledge From Pre-trained Language Model: A New Data-efficient Visual Learning Paradigm (BorLan).
       </p>
     </li>
-    <li>
+    <!--<li>
       <p>
         2021.10, VALSE (Hangzhou), Generalized Domain Conditioned Adaptation Network.
       </p>
@@ -391,6 +351,9 @@ tags: about
   </p> -->
   <p>
     Journal Reviewer for TPAMI, TNNLS, TETC, TIICM, etc.
+  </p>
+  <p>
+    Conference Reviewer for CVPR.
   </p>
 </div>
 
