--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@ tags: about
   <ul>
 
     <li>
-      <p>[Sep 2023] Our LSG for data-efficient image/video/audio learning is accepted by <font color="red">NeurIPS</font> 2023!</p>
+      <p>[Sep 2023] Our <b>LSG</b> for data-efficient image/video/audio learning is accepted by <font color="red">NeurIPS</font> 2023!</p>
     </li>
 
     <li>
-      <p>[July 2023] Our BorLan for data-efficient visual learning is accepted by <font color="red">ICCV</font> 2023!</p>
+      <p>[July 2023] Our <b>BorLan</b> for data-efficient visual learning is accepted by <font color="red">ICCV</font> 2023!</p>
     </li>
 
     <!-- <li>
@@ -198,7 +198,7 @@ tags: about
 
 
 <div id="research">
-  <h2><a name="research">Recent Publications & Technical Reports</a></h2>
+  <h2><a name="research">Recent Publications</a></h2>
   <br />
   <table width="100%" align="center" cellspacing="0" cellpadding="0" style="border-collapse: collapse;">
     <tbody>
@@ -224,12 +224,12 @@ tags: about
           <p>
             We leverage graph neural network to model language semantic space and benefit data-efficient training.
           </p>
-          <a href="https://singalist.github.io/" class="btn btn-outline-primary btn-sm" role="button"
-            aria-pressed="true">Project Page (coming)</a>
-          <a href="https://singalist.github.io/" class="btn btn-outline-primary btn-sm" role="button"
-            aria-pressed="true">Paper (coming)</a>
-          <a href="https://github.com/BIT-DA/" class="btn btn-outline-primary btn-sm" role="button"
-            aria-pressed="true">Code (coming)</a>
+          <!-- <a href="https://singalist.github.io/" class="btn btn-outline-primary btn-sm" role="button"
+            aria-pressed="true">Project Page (coming)</a> -->
+          <a href="https://arxiv.org/abs/2311.08782" class="btn btn-outline-primary btn-sm" role="button"
+            aria-pressed="true">Paper</a>
+          <a href="https://github.com/BIT-DA/LSG" class="btn btn-outline-primary btn-sm" role="button"
+            aria-pressed="true">Code</a>
         </td>
       </tr>
 
@@ -256,10 +256,12 @@ tags: about
           </p>
           <!-- <a href="https://singalist.github.io/" class="btn btn-outline-primary btn-sm" role="button"
             aria-pressed="true">Project Page (coming)</a> -->
-          <a href="https://singalist.github.io/" class="btn btn-outline-primary btn-sm" role="button"
-            aria-pressed="true">Paper (coming)</a>
+          <a href="https://openaccess.thecvf.com/content/ICCV2023/html/Ma_Borrowing_Knowledge_From_Pre-trained_Language_Model_A_New_Data-efficient_Visual_ICCV_2023_paper.html" class="btn btn-outline-primary btn-sm" role="button"
+            aria-pressed="true">Paper</a>
           <a href="https://github.com/BIT-DA/BorLan" class="btn btn-outline-primary btn-sm" role="button"
             aria-pressed="true">Code</a>
+          <a href="https://www.bilibili.com/video/BV14p4y1V7Ym/?spm_id_from=333.788.recommend_more_video.-1&vd_source=9449892be0c9e3f0d9ef47074a426848" class="btn btn-outline-primary btn-sm" role="button"
+            aria-pressed="true">Talk</a>
         </td>
       </tr>
 
@@ -289,6 +291,66 @@ tags: about
           <a href="https://arxiv.org/abs/2208.01195" class="btn btn-outline-primary btn-sm" role="button"
             aria-pressed="true">Paper</a>
           <a href="https://github.com/BIT-DA/Domain-Oriented-Transformer" class="btn btn-outline-primary btn-sm" role="button"
+            aria-pressed="true">Code</a>
+        </td>
+      </tr>
+
+      <!-- TKDE MetaReg -->
+      <tr>
+        <td valign="middle" width="35%">
+          <div class="one" style="text-align:center;">
+            <img src="images/tkde21_metareg.png" style="max-height: 300px;">
+          </div>
+        </td>
+        <td valign="middle" width="65%">
+          <h5>
+            Meta-reweighted Regularization for Unsupervised Domain Adaptation
+          </h5>
+          <p>
+            <a class="uline-special"><span
+              style="color:red">TKDE 2021</span></a>
+          </p>
+          <p>
+            Shuang Li, <b>Wenxuan Ma</b>, Jinming Zhang, Chi Harold Liu*, Jian Liang
+          </p>
+          <p>
+            MetaReg is a self-training based domain adaptation method. We automatically assign optimal weight for target data to reduce the noise of target pseudo-labels. The optimal weights are obtained via meta-learning.
+          </p>
+          <!-- <a href="https://singalist.github.io/" class="btn btn-outline-primary btn-sm" role="button"
+            aria-pressed="true">Project Page (coming)</a> -->
+          <a href="https://ieeexplore.ieee.org/document/9546671" class="btn btn-outline-primary btn-sm" role="button"
+            aria-pressed="true">Paper</a>
+          <a href="https://github.com/BIT-DA/MetaReg" class="btn btn-outline-primary btn-sm" role="button"
+            aria-pressed="true">Code</a>
+        </td>
+      </tr>
+
+      <!-- CVPR DDA -->
+      <tr>
+        <td valign="middle" width="35%">
+          <div class="one" style="text-align:center;">
+            <img src="images/cvpr21_dda.png" style="max-height: 300px;">
+          </div>
+        </td>
+        <td valign="middle" width="65%">
+          <h5>
+            Dynamic Domain Adaptation for Efficient Inference
+          </h5>
+          <p>
+            <a href="https://cvpr2021.thecvf.com/" class="uline-special"><span
+              style="color:red">CVPR 2021</span></a>
+          </p>
+          <p>
+            Shuang Li, Jinming Zhang, <b>Wenxuan Ma</b>, Chi Harold Liu, Wei Li
+          </p>
+          <p>
+            We explore new settings in domain adaptation that considers the computation resource constrains during inference.
+          </p>
+          <!-- <a href="https://singalist.github.io/" class="btn btn-outline-primary btn-sm" role="button"
+            aria-pressed="true">Project Page (coming)</a> -->
+          <a href="https://openaccess.thecvf.com/content/CVPR2021/html/Li_Dynamic_Domain_Adaptation_for_Efficient_Inference_CVPR_2021_paper.html" class="btn btn-outline-primary btn-sm" role="button"
+            aria-pressed="true">Paper</a>
+          <a href="https://github.com/BIT-DA/DDA" class="btn btn-outline-primary btn-sm" role="button"
             aria-pressed="true">Code</a>
         </td>
       </tr>
