--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@ tags: about
   <ul>
 
     <li>
-      <p>[Sep 2023] Our <b>LSG</b> for data-efficient image/video/audio learning is accepted by <font color="red">NeurIPS</font> 2023!</p>
+      <p>[Sep 2023] Our <b>LSG</b> for data-efficient image/video/audio learning is accepted by <font color="red"><b>NeurIPS</b></font> 2023!</p>
     </li>
 
     <li>
-      <p>[July 2023] Our <b>BorLan</b> for data-efficient visual learning is accepted by <font color="red">ICCV</font> 2023!</p>
+      <p>[July 2023] Our <b>BorLan</b> for data-efficient visual learning is accepted by <font color="red"><b>ICCV</b></font> 2023!</p>
     </li>
 
     <!-- <li>
@@ -265,6 +265,36 @@ tags: about
         </td>
       </tr>
 
+      <!-- TNNLS SQAdapt -->
+      <tr>
+        <td valign="middle" width="35%">
+          <div class="one" style="text-align:center;">
+            <img src="images/tnnls23_sqadapt.png" style="max-height: 300px;">
+          </div>
+        </td>
+        <td valign="middle" width="65%">
+          <h5>
+            Source-Free Active Domain Adaptation via Augmentation-Based Sample Query and Progressive Model Adaptation
+          </h5>
+          <p>
+            <a><span
+              style="color:red">TNNLS 2023</span></a>
+          </p>
+          <p>
+            Shuang Li, Rui Zhang, Kaixiong Gong, Mixue Xie, <b>Wenxuan Ma</b>, Guangyu Gao
+          </p>
+          <p>
+            We investigate the novel problem of source-free active domain adaptation, which considers the inaccessibility of the source domain data during active domain adaptation. 
+          </p>
+          <!-- <a href="https://singalist.github.io/" class="btn btn-outline-primary btn-sm" role="button"
+            aria-pressed="true">Project Page (coming)</a> -->
+          <a href="https://ieeexplore.ieee.org/abstract/document/10368185" class="btn btn-outline-primary btn-sm" role="button"
+            aria-pressed="true">Paper</a>
+          <!-- <a href="https://github.com/BIT-DA/Domain-Oriented-Transformer" class="btn btn-outline-primary btn-sm" role="button"
+            aria-pressed="true">Code</a> -->
+        </td>
+      </tr>
+
       <!-- ACM MM DOT -->
       <tr>
         <td valign="middle" width="35%">
@@ -307,7 +337,7 @@ tags: about
             Meta-reweighted Regularization for Unsupervised Domain Adaptation
           </h5>
           <p>
-            <a class="uline-special"><span
+            <a><span
               style="color:red">TKDE 2021</span></a>
           </p>
           <p>
@@ -329,7 +359,7 @@ tags: about
       <tr>
         <td valign="middle" width="35%">
           <div class="one" style="text-align:center;">
-            <img src="images/cvpr21_dda.png" style="max-height: 300px;">
+            <img src="images/cvpr21_dda.png" style="max-height: 300;">
           </div>
         </td>
         <td valign="middle" width="65%">
@@ -352,6 +382,8 @@ tags: about
             aria-pressed="true">Paper</a>
           <a href="https://github.com/BIT-DA/DDA" class="btn btn-outline-primary btn-sm" role="button"
             aria-pressed="true">Code</a>
+          <a href="https://www.bilibili.com/video/BV1R5411P7bE?p=3&vd_source=9449892be0c9e3f0d9ef47074a426848" class="btn btn-outline-primary btn-sm" role="button"
+            aria-pressed="true">Talk</a>
         </td>
       </tr>
 
