--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@ tags: about
   <ul>
 
     <li>
+      <p>[May 2024] Two papers for cross-modality knowledge transfer is accepted by <font color="red"><b>ICML</b></font> 2024!</p>
+    </li>
+
+    <li>
       <p>[Sep 2023] Our <b>LSG</b> for data-efficient image/video/audio learning is accepted by <font color="red"><b>NeurIPS</b></font> 2023!</p>
     </li>
 
@@ -202,6 +206,66 @@ tags: about
   <br />
   <table width="100%" align="center" cellspacing="0" cellpadding="0" style="border-collapse: collapse;">
     <tbody>
+
+      <!-- ICML Modality Knowledge Discrepancy -->
+      <tr>
+        <td valign="middle" width="35%">
+          <div class="one" style="text-align:center;">
+            <img src="images/icml24_mona.png" style="max-height: 300px;">
+          </div>
+        </td>
+        <td valign="middle" width="65%">
+          <h5>
+            Learning Modality Knowledge Alignment for Cross-modality Transfer
+          </h5>
+          <p>
+            <a href="https://icml.cc/" class="uline-special"><span
+              style="color:red">ICML 2024</span></a>
+          </p>
+          <p>
+            <b>Wenxuan Ma</b>, Shuang Li*, Lincan Cai, Jingxuan Kang
+          </p>
+          <p>
+            We propose a new mathematical formulation of 'modality knowledge discrepancy' and investigated a meta-learning-based method to reduce the discrepancy for cross-modality fine-tuning and enable improved knowledge transfer from source pretrained model.
+          </p>
+          <!-- <a href="https://singalist.github.io/" class="btn btn-outline-primary btn-sm" role="button"
+            aria-pressed="true">Project Page (coming)</a> -->
+          <!-- <a href="https://arxiv.org/abs/2311.08782" class="btn btn-outline-primary btn-sm" role="button"
+            aria-pressed="true">Paper (coming)</a>
+          <a href="https://github.com/BIT-DA/LSG" class="btn btn-outline-primary btn-sm" role="button"
+            aria-pressed="true">Code (coming)</a> -->
+        </td>
+      </tr>
+
+      <!-- ICML Intermediate Modality Generation -->
+      <tr>
+        <td valign="middle" width="35%">
+          <div class="one" style="text-align:center;">
+            <img src="images/icml24_pare.png" style="max-height: 300px;">
+          </div>
+        </td>
+        <td valign="middle" width="65%">
+          <h5>
+            Enhancing Cross-modal Fine-tuning with Gradually Intermediate Modality Generation
+          </h5>
+          <p>
+            <a href="https://icml.cc/" class="uline-special"><span
+              style="color:red">ICML 2024</span></a>
+          </p>
+          <p>
+            Lincan Cai, Shuang Li*, <b>Wenxuan Ma</b>, Jingxuan Kang, Binhui Xie, Zixun Sun, Chengwei Zhu
+          </p>
+          <p>
+            We propose an end-to-end cross-modality fine-tuning pipeline, leveraging gradual generation of data from intermediate modalities between source and target modality to bridge the gap.
+          </p>
+          <!-- <a href="https://singalist.github.io/" class="btn btn-outline-primary btn-sm" role="button"
+            aria-pressed="true">Project Page (coming)</a> -->
+          <!-- <a href="https://arxiv.org/abs/2311.08782" class="btn btn-outline-primary btn-sm" role="button"
+            aria-pressed="true">Paper (coming)</a>
+          <a href="https://github.com/BIT-DA/LSG" class="btn btn-outline-primary btn-sm" role="button"
+            aria-pressed="true">Code (coming)</a> -->
+        </td>
+      </tr>
 
        <!-- NeurIPS Language Semantic Graph -->
        <tr>
