--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@ tags: about
     Journal Reviewer for TPAMI, TNNLS, TETC, TIICM, etc.
   </p>
   <p>
-    Conference Reviewer for CVPR.
+    Conference Reviewer for CVPR 2024, ECCV 2024.
   </p>
 </div>
 
@@ -523,6 +523,10 @@ tags: about
   <p>
     Machine Learning Essentials, Spring 2023, Instructor: <a href="https://shuangli.xyz" class="uline">Prof. Li</a>
   </p>
+  <p>
+    Machine Learning and Practice, Spring 2024, Instructor: <a href="https://shuangli.xyz" class="uline">Prof. Li</a>
+  </p>
+  
 
 </div>
 
