--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ tags: about
     $('#more').hide();
   }
 </script>
-<img src="{{ site.baseurl }}/images/photo.jpg" alt="Wenxuan Ma" width="180"
+<img src="{{ site.baseurl }}/images/photo2.jpg" alt="Wenxuan Ma" width="180"
   style="float: right; padding: 5px 0 0 15px; border-radius: 0%;" />
 
 <div class="bio" style="text-align:justify">
